<resources>
    <string name="app_name">MusApp</string>
    <string name="app_version">Version: beta</string>
    <string name="app_notification_name">Audio Player</string>
    <string name="app_notification_description">Audio playback controls</string>

    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_title_my">MY</string>

    <string name="title_authorization">Authorization&#8230;</string>
    <string name="title_loading">Loading&#8230;</string>
    <string name="title_login">Login</string>
    <string name="title_password">Password</string>
    <string name="title_start">Start</string>
    <string name="title_library">Library</string>
    <string name="title_search">Search</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_my_music">My music</string>
    <string name="title_query_search">Search&#8230;</string>
    <string name="title_add_library">Add to library</string>
    <string name="title_delete_library">Delete from library</string>
    <string name="title_go_artist">Go to artist</string>
    <string name="title_go_album">Go to album</string>
    <string name="title_recent_release">Recent release</string>
    <string name="title_tracks">Tracks</string>
    <string name="title_albums">Albums</string>
    <string name="title_artists">Artists</string>
    <string name="title_single">Single</string>
    <string name="title_audio_added">Added to your library</string>
    <string name="title_audio_not_added">Not added to your library</string>
    <string name="title_now_playing">Album</string>
    <string name="title_not_playing">Nothing is playing right now</string>
    <string name="title_select_track">Select a track</string>

    <string name="char_time">——</string>

    <string name="empty_list">No tracks</string>
    <string name="empty_list_album">No albums</string>
    <string name="empty_login_or_password">Please enter login and password</string>
    <string name="empty_request">The request is empty</string>

    <string name="error_block_internet">Problems with the Internet</string>
    <string name="error_block_request">An error occurred while accessing the server</string>
    <string name="error_block_request_auth">Problem with authorization</string>
    <string name="error_block_auth">Invalid password or login</string>
    <string name="error_block_available">Server unavailable</string>
</resources>