<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorOnPrimary"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <include layout="@layout/include_dialog_menu_peek" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/item0"
        android:background="@drawable/item_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/padding_item_vertical"
        android:paddingHorizontal="@dimen/padding_item_horizontal"
        android:drawableEnd="@drawable/action_add"
        android:drawablePadding="@dimen/padding_item_horizontal"
        android:gravity="center_vertical"
        android:textAllCaps="false"
        android:text="@string/title_add_library"
        android:textColor="?attr/colorText"
        android:textSize="@dimen/text_sub_item_size" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/item1"
        android:background="@drawable/item_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/padding_item_vertical"
        android:paddingHorizontal="@dimen/padding_item_horizontal"
        android:drawableEnd="@drawable/action_artist"
        android:drawablePadding="@dimen/padding_item_horizontal"
        android:gravity="center_vertical"
        android:textAllCaps="false"
        android:text="@string/title_go_artist"
        android:textColor="?attr/colorText"
        android:textSize="@dimen/text_sub_item_size" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/item2"
        android:background="@drawable/item_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/padding_item_vertical"
        android:paddingHorizontal="@dimen/padding_item_horizontal"
        android:drawableEnd="@drawable/action_album"
        android:drawablePadding="@dimen/padding_item_horizontal"
        android:gravity="center_vertical"
        android:textAllCaps="false"
        android:text="@string/title_go_album"
        android:textColor="?attr/colorText"
        android:textSize="@dimen/text_sub_item_size" />
</LinearLayout>